* End sentences in d/control with a period. * Added back missing d/python3-wget.docs. * Remove cruft from d/rules.

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Description: pure Python download utility for Python 2
  This package installs the wget module for Python version 2.x. wget module
  can be used to perform basic network downloads inside a Python script.
  .
- More information about the usage can be found at README.txt
+ More information about the usage can be found at README.txt.
 
 Package: python3-wget
 Architecture: all
@@ -32,4 +32,4 @@ Description: pure Python download utility for Python 3
  This package installs the wget module for Python version 3.x. wget module
  can be used to perform basic network downloads inside a Python script.
  .
- More information about the usage can be found at README.txt
+ More information about the usage can be found at README.txt.
